fix: Java 1.8 compatibility - replace records with static inner classes, upgrade mockito to 5.x
- Replace Java record keyword (requires Java 16+) with static final inner classes
- Replace List.copyOf() (requires Java 10+) with Collections.unmodifiableList()
- Remove OkHttp 5.x API methods from test that don't exist in OkHttp 4.12.0
- Upgrade mockito-inline 4.11.0 to mockito-core 5.14.2 for JDK 21 compatibility